# fasthex

./: Cargo.toml  README.md
.github/workflows/: aur-publish.yml  release.yml
src/: main.rs  temporary
