[package]
name = "fasthex"
version = "0.2.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
rayon   = "1.10"
libc    = "0.2"

[[bin]]
name = "fasthex"
path = "src/main.rs"

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
strip           = "symbols"
