[package]
name = "fasthex"
version = "0.3.0"
description = "a very fast hex dumper"
license = "GPL-3.0-or-later"
repository = "https://github.com/CallMeAlphabet/fasthex"
edition = "2021"

[dependencies]
memmap2 = "0.9"
rayon = "1.10"
libc = "0.2"
clihelp = "0.1"

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
strip           = "symbols"
